<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNegro"
    android:backgroundTintMode="add"
    android:foregroundTintMode="screen"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="150dp"
        android:layout_height="225dp"
        android:background="@color/colorNegro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Facilbtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/ic_launcher_background"
                    android:backgroundTint="@color/coloris"
                    android:text="@string/Facil"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/Mediobtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/coloris"
                    android:text="@string/Medio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/Dificilbtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/coloris"
                    android:text="@string/Dificil"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/ComoJugarbtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/coloris"
                    android:text="@string/ComoJugar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>